syntax = "proto3";

package details;

option go_package = "./details";

message DetailsRequest {
  string name = 1;
  int32 age = 2;
  string email = 3;
}

message AddressResponse{
  string street = 1;
  string area = 2;
  string city = 3;
  string district = 4;
}

message DataResponse {
  string name = 1;
  int32 age = 2;
  string email = 3;
  repeated AddressResponse address = 4;
}

message DetailsResponse {
  string code = 1;
  string message = 2;
  string lang = 3;
  DataResponse data = 4;

}

service DetailsService {
  rpc GetDetails(DetailsRequest) returns (DetailsResponse);
  rpc GetDetailsWithAuthorization(DetailsRequest) returns (DetailsResponse);
}
